# astrotracker

./: README.md  docker-compose.yml  sefstars.txt
.cursor/rules/: error-documentation.mdc
api/: .example.env  Dockerfile  _poetry.lock_  alembic.ini  pyproject.toml  test.txt
api/app/: main.py
api/app/api/: deps.py
api/app/api/v1/endpoints/: charts.py  health.py
api/app/core/: config.py  email.py  security.py
api/app/crud/: chart.py  user.py
api/app/db/: base.py  session.py  user_manager.py
api/app/models/: chart.py  user.py
api/app/schemas/: chart.py  user.py
api/app/scripts/: load_sqlalchemy_url.py
api/app/services/: astrology.py  geolocation.py
api/cache/: kerykeion_geonames_cache.sqlite
api/migrations/: env.py
api/migrations/versions/: 5576eb54747d_add_chart_table.py  5b817460df8a_create_user_table_manually.py  adcccfe29728_add_oauth_account_table.py
api/tests/: conftest.py  test_chart.py
api/tests/api/v1/: test_charts_api.py
api/tests/services/: test_astrology.py
api/tests/utils/: chart.py
docs/: problems.md
docs/planning/: initial_features.md  initial_request.md  product_review.md  technology_stack.md
docs/tasks/: final_implementation_tasks.md  implemented.md  initial_implementation_tasks.md  todo.md  update.md
web/: .dockerignore  .eslintrc.cjs  .prettierignore  .prettierrc.cjs  Dockerfile  astro.config.mjs  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
web/e2e/: auth.spec.ts
web/src/layouts/: Layout.astro
web/src/lib/: apiClient.ts
web/src/pages/: dashboard.astro  (+4 more)
(+31 files in other folders)
