[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Alex Kamalov <akamalov@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
python-dotenv = "^1.0.0"
starlette = "<0.47.0,>=0.40.0"
pydantic = "<3.0.0,>=1.7.4"
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.0.0"
fastapi-users = {version = "^14.0.1", extras = ["sqlalchemy", "oauth"]}
sentry-sdk = {extras = ["fastapi", "sqlalchemy"], version = "^2.0.0"}
alembic = "^1.13.1"
email-validator = "^2.1.1"
uvicorn = {extras = ["standard"], version = "^0.34.2"}
watchfiles = "^1.0.5"
httpx-oauth = ">=0.13.0,<1.0.0"
geopy = "^2.4.1"
kerykeion = "^4.26.2"
pyswisseph = ">=2.10"
timezonefinder = "^6.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.8"
alembic = "^1.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# --- Linter/Formatter Config (Commented Out) --- 
# [tool.black]
# line-length = 88
# target-version = ['py310']
# 
# [tool.ruff]
# line-length = 88
# target-version = "py310"
# 
# [tool.ruff.lint]
# select = [
#     "E",
#     "W",
#     "F",
#     "I",
#     "C",
#     "B",
# ]
# ignore = [
#     "E501",
# ]
# 
# [tool.ruff.format]
# quote-style = "double"

# --- Pytest Config --- 
[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
